force-app/main/default/objects/BLN_FlowException__e/BLN_FlowException__e.object-meta.xml
<CustomObject>
    <description>FOUK-- 2048--&gt; Created a platform event  to capture exception.</description>
    <label>Flow Exception</label>
    <pluralLabel>Flow Exceptions</pluralLabel>
</CustomObject>