force-app/main/default/objects/BLN_FlowException__e/fields/BLN_CurrentUser__c.field-meta.xml
<CustomField>
    <fullName>BLN_CurrentUser__c</fullName>
    <label>Current User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>