force-app/main/default/objects/BLN_FlowException__e/fields/BLN_EntityName__c.field-meta.xml
<CustomField>
    <fullName>BLN_EntityName__c</fullName>
    <label>BLN_EntityName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>