force-app/main/default/objects/BLN_FlowException__e/fields/BLN_ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>BLN_ErrorMessage__c</fullName>
    <label>BLN_ ErrorMessage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>