force-app/main/default/objects/BLN_FlowException__e/fields/BLN_LogType__c.field-meta.xml
<CustomField>
    <fullName>BLN_LogType__c</fullName>
    <label>BLN_LogType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>