force-app/main/default/objects/BLN_FlowException__e/fields/BLN_MethodStep__c.field-meta.xml
<CustomField>
    <fullName>BLN_MethodStep__c</fullName>
    <label>BLN_ MethodStep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>