force-app/main/default/objects/BLN_FlowException__e/fields/BLN_RecordIdIdentifier__c.field-meta.xml
<CustomField>
    <fullName>BLN_RecordIdIdentifier__c</fullName>
    <label>Record Id Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>